GPencil: Insert Blank Keyframe (Active Layer) creates a new frame not only on an active layer but also on the other layers #72215

Closed
opened 2019-12-06 03:26:42 +01:00 by n1729 · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-02 18:02, hash: 1e480840a2
Worked: (optional)

Exact steps for others to reproduce the error

  1. Go to Draw mode
  2. Draw something on some layers
  3. Click a menu of Draw > Animation > Insert Blank Keyframe (All Layers)
  4. Undo it
  5. Click a menu of Draw > Animation > Insert Blank Keyframe (Active Layer)

You can see All Layers Option is sticking there on the Adjuct Last Operation panel.
The same thing happens at Duplicate Active Keyframe.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-02 18:02, hash: `1e480840a2` Worked: (optional) **Exact steps for others to reproduce the error** 1. Go to Draw mode 2. Draw something on some layers 3. Click a menu of Draw > Animation > Insert Blank Keyframe (All Layers) 4. Undo it 5. Click a menu of Draw > Animation > Insert Blank Keyframe (Active Layer) You can see All Layers Option is sticking there on the Adjuct Last Operation panel. The same thing happens at Duplicate Active Keyframe.
Author

Added subscriber: @n1729

Added subscriber: @n1729
Antonio Vazquez self-assigned this 2019-12-06 11:15:43 +01:00

This issue was referenced by 593d972407

This issue was referenced by 593d9724079e54a79a5d3c007af826fd6ea9bf6f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72215
No description provided.