Fix T72215: Insert Blank Keyframe Active Layer) creates a new frame in all layers

The default parameter was saved and the next time the operator was used, if it was used all layers, the default value changed.